--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "next": "^12.3.0",
+    "next": "^13.0.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -21,6 +21,8 @@
     "swiper": "^8.4.2"
   },
   "devDependencies": {
+    "eslint": "^8.25.0",
+    "eslint-config-next": "^13.0.0",
     "sass": "^1.54.9"
   }
 }
