--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,6 @@
 {
     "cSpell.words": [
-        "busqueda",
         "chipa",
-        "Chipa",
-        "Comandos",
-        "Consola",
-        "devs",
-        "grandeza",
-        "Iniciar",
-        "moderar",
-        "Música",
-        "nueva",
-        "Opciones",
-        "reproductor",
-        "sesión"
+        "Chipa"
     ]
 }
